2015-03-18  Richard Biener  <rguenther@suse.de>

	* tree-ssa-loop-ch.c (pass_data_ch): Remove TODO_cleanup_cfg.
	(pass_ch::execute): Cleanup the CFG only if we did sth.
	* tree-vect-generic.c (pass_data_lower_vector): Remove TODO_cleanup_cfg.

2015-03-18  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	* expmed.c (synth_mult): Use std::swap instead of manually
	swapping algorithms.

2015-03-18  Jakub Jelinek  <jakub@redhat.com>

	PR target/65078
	* config/i386/sse.md (movsi/movdi -> vec_extract_*_0 splitter): New.

2015-03-16  Georg-Johann Lay  <avr@gjlay.de>

	PR target/65296
	* config/avr/avr.opt (-nodevicelib): New option.
	* doc/invoke.texi (AVR Options): Document it.
	* config/avr/avrlibc.h (LIB_SPEC, LIBGCC_SPEC) [avr1]: Don't link
	libgcc.a, libc.a, libm.a.
	* config/avr/specs.h: Same.
	* config/avr/gen-avr-mmcu-specs.c (print_mcu): Don't print specs
	which don't (directly) depend on the device.  Print more help.
	(*avrlibc_devicelib) [-nodevicelib]: Don't link libdev.a.
	(*cpp): Don't define __AVR_DEV_LIB_NAME__.
	* config/avr/driver-avr.c: Remove -nodevicelib from option list in
	case of an error.
	(avr_devicespecs_file): Use suffix "%s" instead of absolute path
	for specs file name.
	* config/avr/avr-arch.h (avr_mcu_t) [.library_name]: Remove.
	* config/avr/avr-mcus.def: Adjust initializers and comments.

2015-03-16  Jan Hubicka  <hubicka@ucw.cz>

	* tree-sra.c (ipa_sra_preliminary_function_checks): Use
	DECL_ONE_ONLY to check if decl is one only.
	* ipa-split.c (consider_split): Limit splitt of one only functions.

2015-03-16  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/65427
	* tree-vect-generic.c (do_cond, expand_vector_scalar_condition): New
	functions.
	(expand_vector_operations_1): Handle BLKmode vector COND_EXPR.

2015-03-16  Marek Polacek  <polacek@redhat.com>

	* cgraph.h (add_new_static_var): Remove declaration.
	* varpool.c (add_new_static_var): Remove function.

2015-03-16  Jakub Jelinek  <jakub@redhat.com>
